# IssueManagerPoC

./: .gitignore  README.md  deleteme.test  pyproject.toml
.devcontainer/: devcontainer.json
default_project/team/: __init__.py  __main__.py  agent.py  utils.py
default_project/team/agents/: architect.json  developer.json  pm.json  tester.json
default_project/team/issue_board/: 0.json
issue_board/1/: 1.json
issue_board/1/1/: 1.1.json
issue_board/1/2/: 1.2.json
issue_board/1/3/: 1.3.json
issue_evaluator/: Dockerfile  __main__.py  docker-compose.yaml  main.py  pyproject.toml  run.sh
issue_evaluator/embedded_dev_team/: README.md  __init__.py  __main__.py  config.py  fastapi_app.py  orchestrator.py
issue_evaluator/embedded_dev_team/agents/: architect.json  backend_dev.feedback.yaml  backend_dev.json  designer.json  frontend_dev.json  pm.json  sre.json
issue_evaluator/embedded_dev_team/agents/retired_agents/: techlead.json  tester.json
issue_evaluator/embedded_dev_team/defs/: __init__.py  agent_defs.py  base_agent.py  ollama_agent.py  openai_agent.py
issue_evaluator/embedded_dev_team/static/css/: style.css
issue_evaluator/embedded_dev_team/static/js/: chat.js
issue_evaluator/embedded_dev_team/templates/: issue_chat.html
issue_evaluator/embedded_dev_team/utils/: file_utils.py  issue_management.py  log.py
issue_evaluator/issue_board/1/: 1.json
issue_evaluator/issue_board/10/: 10.json
issue_evaluator/issue_board/2/: 2.json
issue_evaluator/issue_board/3/: 3.json
issue_evaluator/issue_board/4/: 4.json
issue_evaluator/issue_board/5/: 5.json
issue_evaluator/issue_board/6/: 6.json
issue_evaluator/issue_board/7/: 7.json
issue_evaluator/issue_board/8/: 8.json
issue_evaluator/issue_board/9/: 9.json
sweteam/: __main__.py  test.py
sweteam/bootstrap/: README.md  README_ISSUE_CHAT.md  __init__.py  __main__.py  agent.py  config.py  defs.py  execassistant.py  fastapi_app.py  ollama_agent.py  openai_agent.py  orchestrator.py  tester.py  utils.py
sweteam/bootstrap/agents/: architect.feedback.yaml  architect.json  backend_dev.json  designer.json  developer.json  frontend_dev.feedback.yaml  frontend_dev.json  pm.feedback.yaml  pm.json  secretary.json  sre.json  techlead.json  tester.json
sweteam/bootstrap/defs/: agent_defs.py  base_agent.py  ollama_agent.py
sweteam/bootstrap/static/css/: style.css
sweteam/bootstrap/static/js/: chat.js  json-formatter.js
sweteam/bootstrap/templates/: issue_chat.html
sweteam/bootstrap/utils/: __init__.py  __main__.py  doc_indexes.py  file_utils.py  initialize_project.py  issue_management.py  issue_vectors.py  log.py  redis_pool.py
sweteam/default_project/: __main__.py  agent.py  architect.py  utils.py
sweteam/default_project/agents/: pm.json
sweteam/issue_board/0/: 0.json
