[tool.poetry]
name = "sweteam"
version = "0.1.0"
description = "Software Engineering Team"
authors = ["Alan Tan <alan@alantan.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ollama = "^0.4.3"
openai = "^1.25.0"
pyyaml = "^6.0.1"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
pydantic-settings = "^2.2.1"
llama-index = "^0.11.16"
llama-index-llms-ollama = "^0.3.3"
pydantic = "^2.10.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
