[project]
name = "sweteam"
version = "0.1.0"
description = "Software Engineering Team"
authors = [{ name = "Alan Tan", email = "alan@alantan.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "ollama>=0.4.3,<0.5",
    "openai>=1.25.0,<2",
    "pyyaml>=6.0.1,<7",
    "fastapi>=0.111.1,<0.112",
    "uvicorn>=0.29.0,<0.30",
    "python-multipart>=0.0.9,<0.0.10",
    "pydantic-settings>=2.2.1,<3",
    "llama-index>=0.11.16,<0.12",
    "llama-index-llms-ollama>=0.3.3,<0.4",
    "pydantic>=2.10.4,<3",
]

[dependency-groups]
dev = ["pytest>=8.2.0,<9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["default_project/test app", "default_project"]
