[project]
name = "sweteam"
version = "0.1.0"
description = "Software Engineering Team"
authors = [{ name = "Alan Tan", email = "alan@alantan.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "ollama>=0.4.3,<0.5",
    "openai>=1.25.0,<2",
    "pyyaml>=6.0.1,<7",
    "fastapi>=0.111.1,<0.112",
    "uvicorn>=0.29.0,<0.30",
    "python-multipart>=0.0.9,<0.0.10",
    "pydantic-settings>=2.2.1,<3",
    "pydantic>=2.10.4,<3",
    "llama-index-embeddings-ollama>=0.5.0",
    "llama-index-llms-ollama>=0.5.2",
    "llama-index-readers-file>=0.4.5",
    "llama-index-vector-stores-redis>=0.5.0",
    "llama-index>=0.12.22",
    "llama-index-storage-docstore-redis>=0.3.0",
    "llama-index-storage-index-store-redis>=0.4.0",
    "llama-index-readers-json>=0.3.0",
    "aiofiles>=24.1.0",
]

[dependency-groups]
dev = ["pytest>=8.2.0,<9"]


