[project]
name = "issue-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <4"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.111.1",
    "llama-index>=0.12.22",
    "llama-index-embeddings-ollama>=0.5.0",
    "llama-index-llms-ollama>=0.5.2",
    "llama-index-readers-file>=0.4.5",
    "llama-index-readers-json>=0.3.0",
    "llama-index-storage-docstore-redis>=0.3.0",
    "llama-index-storage-index-store-redis>=0.4.0",
    "llama-index-vector-stores-redis>=0.5.0",
    "ollama>=0.4.7",
    "openai>=1.65.2",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.2",
    "sse-starlette>=2.1.3",
    "uvicorn>=0.29.0",
]
